# pack-ripper

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
scraper/: scrape.py
src/cli/: build.js  scrape.js
src/data/sets/: 2025-donruss-optic-football.json
src/site/: index.html  main.jsx  vite.config.js
src/site/components/: App.jsx  BoxOpener.jsx  BoxTypeSelector.jsx  CardSlot.jsx  CaseTracker.jsx  PackArt.jsx  PackModal.jsx  PackReveal.jsx  SetSelector.jsx  UpdatePrompt.jsx
src/site/simulator/: engine.js  pity.js
src/site/styles/: index.css
