[project]
name = "pack-ripper"
version = "0.1.0"
description = "Trading card pack opening simulator -- scrapes Beckett checklists, simulates box breaks with real odds"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[dependency-groups]
dev = []
